Added comments to denote containers

--- a/red-inside-snowfighter.html
+++ b/red-inside-snowfighter.html
@@ -32,6 +32,7 @@
 		<div id="skiptocontent" class="skip-nav">
 		  <a href="#main-content" class="link-btn skip">skip to main content</a>
 		</div>
+		<!-- Header -->
 		<header class="header">
 			<section class="secondary-nav">
 				<div class="container">
@@ -48,7 +49,7 @@
 							</li>
 						</ul>
 					</nav>
-					<div class="search search-internal col-md-4 col-sm-4 col-xs-4">
+					<div class="search search-internal col-md-5 col-sm-5 col-xs-5">
 						<div class="search-input-container">
 			    			<button>Search</button>
 						    <div class="search-text">
@@ -56,7 +57,7 @@
 						    </div>
 						</div>
 			  		</div>
-					<div class="page-tools col-md-4 col-sm-4 col-xs-4">
+					<div class="page-tools col-md-3 col-sm-3 col-xs-3">
 						<a href="http://www.baltimorecountymd.gov/Subscribe/" class="subscribe" title="Subscribe to Baltimore County Newsletters.">Subscribe</a>
 						<div class="resizer">
 						  <ul class="resizer-list inline-list">
@@ -107,11 +108,13 @@
 			  	</div>
 			</div>
 		</header>
-
+		<!-- End of Header -->
+		<!-- Main Content Container -->
 		<div id="main-content" class="county-information">
-		<div class="county-information-container container-fluid">
-		<div id="backgroundgradient">
-			<div id="backgroundshadow">
+			<!-- Grid Container for main content -->
+			<div class="county-information-container container-fluid">
+				<div id="backgroundgradient">
+				<div id="backgroundshadow">
 				<!--SITE EXECUTIVE HTML START-->
 				<div id="maincontainer"><a name="SkipNav"></a><div id="column1"><div class="logoboxbottom">&nbsp;</div><div id="container_localnavigation"><div id="baco_subnav"></div><div id="services"><!-- skip navigation removed from included pages --><div id="customlocalnavigations"><ul id="localnav"><li class="title">In This Section</li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/" title="Learn more about the Department of Public Works.">Public Works Overview</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/emergency_prep/" title="Learn more about the Office of Emergency Management.">Emergency Preparedness</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/snow_trashrecyclingcollection.html" title="View the current trash and recycling collection status.">Trash and Recycling Status</a></li><li><a href="http://www.baltimorecountymd.gov/News/weather/" title="View severe weather and closing information.">County Closing Information</a></li><li><a href="http://www.chart.state.md.us/" title="View state road conditions.">State Road Conditions</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/roadclosures/" title="View current road closures in Baltimore County.">Current Road Closures</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/highways/stormrelatedcosts.html" title="View storm costs by fiscal year.">Storm Costs</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/highways/stormdata.html" title="View storm data for storms that impacted Baltimore County.">Storm Data</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/highways/snowfacts.html" title="View seasonal data related to winter storm operations and costs.">Snow Facts</a></li></ul></div></div><div id="services"><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><!-- skip navigation removed from included pages --><div id="servicescontainer"><ul class="noindent"><li class="title">Most Requested Services</li><li><a href="http://www.baltimorecountymd.gov/Agencies/humanresources/jobs/index.html" title="View Baltimore County job listings.">View Job Listings</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/taxsearch/index.html" title="Pay or search property taxes online.">Pay/Search Property Taxes Online</a></li><li><a href="http://myneighborhood.baltimorecountymd.gov/" title="Use this interactive map to find your zoning.">Find&nbsp;Your&nbsp;Zoning</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/law/countycode.html" title="Browse County Codes.">Browse County Codes</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/circuit/jurycomm.html" title="Complete the jury duty questionnaire.">Complete Jury Questionnaire</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/circuit/dailydocket/index.html" title="View the Circuit Court daily docket.">View Daily Docket</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/budfin/citations/index.html" title="Pay your parking and red light tickets here.">Pay Parking and Red Light Tickets</a></li><li><a href="http://egov2.baltimorecountymd.gov/votingweb/default.aspx?pageid=2" title="Use the polling place locator to find your council district. ">Find Your Council&nbsp;District</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/publicworks/solid_waste/collectionconnection.html" title="Download and print you trash/recycling collection schedule.">Download Trash Schedule</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/myneighborhood/facilities.html" title="Find a county facility in your area.">Locate&nbsp;County Facilities</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/police/crime/index.html" title="Search crime statistics in your neighborhood.">Search Crime Stats</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/recreation/programdivision/index.html" title="Find recreation programs and activites offered in your neighborhood.">Find&nbsp;Recreation Activities</a></li><li><a href="http://www.baltimorecountymd.gov/Agencies/volunteers/index.html" title="Find a volunteer opportunity that matches your skills and interests.">Volunteer Today</a></li></ul><div id="moreservices"><a href="http://www.baltimorecountymd.gov/Services/index.html" title="Browse a directory of other online services.">More &gt;&gt;&gt;</a></div></div></td></tr></tbody></table></div></div></div><div id="column2"><div id="agencyheader"><div id="agencyname"><!-- skip navigation removed from included pages --><div>Department of Public Works</div></div><div id="shareutilities"><div id="sharebutton"><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style ">
@@ -249,9 +252,10 @@
 				<!--SITE EXECUTIVE HTML END-->
 		</div>
 		</div>
-		</div>
-		</div>
-		
+		</div><!-- End of Grid Container for main content -->
+		</div><!-- End of Main Content Container -->
+
+		<!-- Start of Footer -->
 		<footer class="footer">
 			<section class="primary-footer container">
 			<section class="county-map-container col-md-6 col-sm-6 col-xs-6">
@@ -344,6 +348,6 @@
 		<div class="full-site-container">
 			<button class="btn-link reView view-full-site-btn"  data-coreText='View Full Site' data-defaultText='View Mobile Site'>View Full Site</button>
 		</div>
-	</footer>
+	</footer><!-- End of Footer -->
 </body>
 </html>
