Reformatted/ReOrg Code

--- a/homepage.html
+++ b/homepage.html
@@ -33,9 +33,9 @@
 		  <a href="#main-content" class="link-btn skip">skip to main content</a>
 		</div>
 		<header class="header">
-			<section class="secondary-nav hidden-xs">
+			<section class="secondary-header hidden-xs">
 				<div class="container">
-				<nav class="col-md-4 col-sm-6 ">
+				<nav class="secondary-nav col-md-4 col-sm-6 ">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -130,7 +130,7 @@
 			  </div>
 			</div>
 		</header>
-		<div class="promotions-container">
+		<div class="carousel-container">
 			<div class="search-container">
 			<div class="search">
 			  <div class="search-input-container">
@@ -153,51 +153,51 @@
 			</div>
 			<section class="carousel-container container-fluid">
 				<div class="carousel">
-					<div class="promotions">
-					  <div class="promotions-item">
+					<div class="carousel">
+					  <div class="carousel-item">
 					    <img 
 							srcset="assets/img/carousel-petadoption-small.jpg 200w,
 									assets/img/carousel-petadoption-medium.jpg 500w,
 									assets/img/carousel-petadoption.jpg 1200w"
 							sizes="100%" 
-						    class="promotion-image" 
+						    class="carousel-image" 
 						    src="assets/img/carousel-petadoption-small.jpg"  />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Adopt a lost or adoptable pet</h2>
 					      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-walkingtrails-reallysmall.jpg" srcset="assets/img/carousel-walkingtrails.jpg 767w"/>
-					    <div class="promotions-message">
+					  <div class="carousel-item">
+					    <img class="carousel-image" src="assets/img/carousel-walkingtrails-reallysmall.jpg" srcset="assets/img/carousel-walkingtrails.jpg 767w"/>
+					    <div class="carousel-message">
 					      <h2>Walking Trails and Paths</h2>
 					      <p>Use our <a href="#" title="Follow Snowfighter">online search tool</a> to find walking trails and paths throughout Baltimore County.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
-					    <div class="promotions-message">
+					  <div class="carousel-item">
+					    <img class="carousel-image" src="assets/img/carousel-snowfighter.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
+					    <div class="carousel-message">
 					      <h2>Follow Snowfighter</h2>
 					      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" srcset="assets/img/carousel-walksafe-small.jpg 767w" />
-					    <div class="promotions-message">
+					  <div class="carousel-item">
+					    <img class="carousel-image" src="assets/img/carousel-walksafe.jpg" srcset="assets/img/carousel-walksafe-small.jpg 767w" />
+					    <div class="carousel-message">
 					      <h2>Walk safe to your next destination</h2>
 					      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" srcset="assets/img/carousel-stormwater-small.jpg 767w" />
-					    <div class="promotions-message">
+					  <div class="carousel-item">
+					    <img class="carousel-image" src="assets/img/carousel-stormwater.jpg" srcset="assets/img/carousel-stormwater-small.jpg 767w" />
+					    <div class="carousel-message">
 					      <h2>Question about Stormwater?</h2>
 					      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-bigtrees.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
-					    <div class="promotions-message">
+					  <div class="carousel-item">
+					    <img class="carousel-image" src="assets/img/carousel-bigtrees.jpg" srcset="assets/img/carousel-snowfighter-small.jpg 767w" />
+					    <div class="carousel-message">
 					      <h2>Big Trees Sale</h2>
 					      <p>Purchase trees for planting on private properties. <a href="#" title="Pre-order a big tree.">Pre-order trees</a> online today!</p>
 					    </div>
@@ -319,7 +319,7 @@
 		
 		<footer class="footer">
 			<section class="primary-footer container">
-			<section class="county-map-container col-md-6 col-sm-6">
+			<section class="county-address-container col-md-6 col-sm-6">
 				<img src="assets/img/footer-county-shape.png" alt="" class="county-map hidden-sm hidden-xs">
 				<div class="county-address">
 					<h2>Baltimore County Government</h2>
@@ -347,7 +347,7 @@
 			<section class="tranlate-page col-md-2 hidden-sm hidden-xs">
 				<h2>Translate</h2>
 				<ul class="translate-page-list">
-					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
+					<li class="translate-page-list-item translate-page-list-item-american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
 					<li class="translate-page-list-item translate-page-list-item-arabic">
 						<a title="Translate this site in Arabic." href="http://translate.google.com/translate?hl=en&amp;sl=en&amp;tl=ar&amp;u=http%3A%2F%2Fbaltimorecountymd.gov/%2F">العربية</a>
 					</li>
