Added pages to manage se templates
These pages are being used as either inclusions or are the actual
template html that differs from the dev html files.

--- a/homepage-alert.html
+++ b/homepage-alert.html
@@ -13,7 +13,7 @@
 		<script src="assets/js/flickr.js"></script>
 		<script src="assets/js/county-news.js"></script>
 		<script src="assets/js/text-resizer.js"></script>
-		<script src="assets/js/template.js"></script>
+		<script src="assets/js/homepage.js"></script>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,9 +24,9 @@
 	</head>
 	<body class="homepage">
 		<header class="header">
-			<section class="secondary-nav hidden-xs">
+			<section class="secondary-header hidden-xs">
 				<div class="container">
-				<nav class="col-md-4 col-sm-6 ">
+				<nav class="secondary-nav col-md-4 col-sm-6 ">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -121,7 +121,7 @@
 			  </div>
 			</div>
 		</header>
-		<div class="promotions-container">
+		<div class="carousel-wrapper">
 			
 			<div class="search-container">
 				<div class="alert">
@@ -150,45 +150,45 @@
 			</div>
 			<section class="carousel-container container">
 				<div class="carousel">
-					<div class="promotions">
-					  <div class="promotions-item">
+					<div class="carousel">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Adopt a lost or adoptable pet</h2>
 					      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-walkingtrails.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Walking Trails and Paths</h2>
 					      <p>Use our <a href="#" title="Follow Snowfighter">online search tool</a> to find walking trails and paths throughout Baltimore County.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Follow Snowfighter</h2>
 					      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Walk safe to your next destination</h2>
 					      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Question about Stormwater?</h2>
 					      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
 					    </div>
 					  </div>
-					  <div class="promotions-item">
+					  <div class="carousel-item">
 					    <img class="promotion-image" src="assets/img/carousel-bigtrees.jpg" />
-					    <div class="promotions-message">
+					    <div class="carousel-message">
 					      <h2>Big Trees Sale</h2>
 					      <p>Purchase trees for planting on private properties. <a href="#" title="Pre-order a big tree.">Pre-order trees</a> online today!</p>
 					    </div>
