--- a/homepage.html
+++ b/homepage.html
@@ -130,7 +130,7 @@
 			  </div>
 			</div>
 		</header>
-		<div class="carousel-container">
+		<div class="carousel-wrapper">
 			<div class="search-container">
 			<div class="search">
 			  <div class="search-input-container">
@@ -208,7 +208,7 @@
 		</div>
 		<div id="main-content" class="county-information">
 		<div class="county-information-container container-fluid">
-		
+		<div class="row">
 		<section class="news-feed col-md-8">
 			<h2 class="county-information-headline">Baltimore County Now</h2>
 			<div class="county-photo-feed col-md-12"></div><!--flickr feed -->
@@ -316,9 +316,11 @@
 		</section>
 		</div>
 		</div>
+		</div>
 		
 		<footer class="footer">
 			<section class="primary-footer container">
+
 			<section class="county-address-container col-md-6 col-sm-6">
 				<img src="assets/img/footer-county-shape.png" alt="" class="county-map hidden-sm hidden-xs">
 				<div class="county-address">
