--- a/red-inside-snowfighter.html
+++ b/red-inside-snowfighter.html
@@ -34,7 +34,7 @@
 		</div>
 		<!-- Header -->
 		<header class="header">
-			<section class="secondary-nav">
+			<section class="secondary-header">
 				<div class="container">
 					<nav class="col-md-4 col-sm-4 col-xs-4">
 						<ul class="secondary-nav-list inline-list">
@@ -72,6 +72,7 @@
 			<div class="primary-header">
 				<!-- Branding -->
 				<div class="container">
+				<div class="row">
 				    <div class="brand col-md-4 col-sm-4 col-xs-4">
 				      	<a href="http://www.baltimorecountymd.gov" title="View the Baltimore County Government homepage.">
 				      		<img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
@@ -81,7 +82,6 @@
 				  		</a>
 				    </div>
 					<!-- I want to Navigation -->
-					<div class="primary-nav-container">
 					    <ul class="primary-nav col-md-8 col-sm-8 col-xs-8" role="navigation">
 					      <li class="primary-nav-item col-md-4 col-sm-4 col-xs-4">
 					        <h2 class="primary-nav-item__headline">
@@ -99,6 +99,7 @@
 					        </h2>
 					      </li>
 					    </ul>
+					    <div class="clearfix"></div>
 				    	<nav class="hamburger-nav">
 				    		<a class="hamburger-btn" href="#" title="Navigate Baltimore County's Website">
 				    			<img src="assets/img/hamburger.png" height="32" width="32" alt="Navigate Baltimore County's Website" /></a>
