--- a/staging/inside-red-body.html
+++ b/staging/inside-red-body.html
@@ -481,7 +481,6 @@ label.website{display:none;}
 </table>
 </div>
 </div>
-</div>
 <div id="secondary-footer" class="secondary-footer">
 <div id="secondary-footer-container" class="container">
 <div id="secondary-footer-row" class="row">
@@ -504,4 +503,4 @@ label.website{display:none;}
 </table>
 </div>
 </div>
-</div>
+</div></div>
